k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-app
  namespace: crm
  labels:
    app.kubernetes.io/name: crm
    app: crm-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: crm-app
